codama-macros/tests/codama_attribute/type_directive/double_type.fail.stderr
error: expected a single value, found a list
 --> tests/codama_attribute/type_directive/double_type.fail.rs:3:18
  |
3 | #[codama(type = (number(u32), public_key))]
  |                  ^^^^^^^^^^^^^^^^^^^^^^^
